2008-10-09  Kentaro Fukuchi <fukuchi@megaui.net>
	* src/tools/oscsend.c: Fixed compile-time error on OS X.
	  (thanks to Koichiro Ozaki)

2008-10-07  Stephen Sinclair <radarsat1@gmail.com>
	* Move lo_arg_size(), lo_get_path(), lo_arg_host/network_endian() back to lo_lowlevel.h.
	* Expose the lo_server_dispatch_data() function as public.
	* Fix zero-padding of path and type strings in lo_message_deserialise().

2008-09-07  Kentaro Fukuchi <fukuchi@megaui.net>
	* Memory leak in lo_address_new_from_url() has been fixed.
	* Memory leak in dispatch_method() has been fixed.
	* Fix a typo and some missing free() in testlo.c.

2008-09-04  Stephen Sinclair <radarsat1@gmail.com>
	* Change license of LibLo to LGPL 2.1 or later.
	  (With permission of all authors.)

2008-07-11  Kentaro Fukuchi <fukuchi@megaui.net>
	* Some error checks have been added.
	* oscsend now uses strtod() instead of strtof(). strtof of glibc returned
	  buggy results when --std=c99 is not given. (strtof is described in C99)

2008-06-18  Stephen Sinclair <radarsat1@gmail.com>
	* Update AUTHORS
	* Release version 0.25

2008-06-05  Stephen Sinclair <radarsat1@gmail.com>
	* Fix autogen.sh: Use glibtoolize if it exists, for OS X.
	* Fix undefined MSG_NOSIGNAL in testlo.c.
	* Fix warning on lo_message_deserialize().

2008-05-05  Stephen Sinclair <radarsat1@gmail.com>
	* Fix invalid pointer in lo_server_del_method() when doing pattern matching. (Camille Troillard)
	
2008-04-28  Stephen Sinclair <radarsat1@gmail.com>
	* Add support for multicast groups to LibLo.
	* Add test case for sending a crafted packet that would crash a lo_server without validation.
	* Make validation-related functions internal to liblo.
	* Add server input validation along with a function to deserialise an OSC message. (Chris Hixon)
	* Fix bad socket number in lo_client_sockets when a server is freed.

2008-04-21  Stephen Sinclair <radarsat1@gmail.com>
	* Added Daniel Lacroix's patch for level 2 broadcast support.